language/move-lang/tests/move_check/typing/uninferred_type_unpack_bind.move
module M {
    struct S<T> {}

    t() {
        let S{} = S{};
    }
}
